# boostcompute

./: .gitignore  CMakeLists.txt  main.cpp
DTS/: Algebra.cpp  Algebra.hpp
